--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     <div class="card">
         <div class="search" >
             <input type="text" placeholder="Enter city Name">
-            <button><img src="/images/search.png"></button>
+            <button><img src=".images/search.png"></button>
             </div>
         
             <div class="weather">
-                <img src="/images/sunny.png"  class="weather-icon">
+                <img src=".images/sunny.png"  class="weather-icon">
                  <h1 class="temp">25°C</h1>
                  <h2 class="city ">Addis Ababa</h2>
                  <div class="details">
                     <div class="col">
-                        <img src="/images/humidity.png">
+                        <img src=".images/humidity.png">
                     <div>
                         <p class="humidity">35%</p>
                         <p>humidity</p>
                     </div>
                     </div>
                     <div class="col">
-                        <img src="/images/wind.png">
+                        <img src=".images/wind.png">
                     <div>
                         <p class="wind">5 km/h</p>
                         <p>wind speed</p>
