--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>weather app</title>
     <link rel="stylesheet" href="weather app/style.css">
+    <link rel="icon" type="images/png" href="img/favicon.png">
     
 
 </head>
